[workspace]

resolver = "2"

members = [ "crates/bevy-dojo", "crates/dojo-lang", "crates/dojo-language-server", "crates/dojo-world", "crates/dojo-test-runner", "crates/dojo-signers", "crates/katana", "crates/katana-core", "crates/katana-rpc", "crates/sozo", "crates/torii" ]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dojoengine/dojo/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.66"
blockifier = { git = "https://github.com/starkware-libs/blockifier" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "eaea41fe" }
cairo-lang-casm = "1.0.0"
cairo-lang-compiler = "1.0.0"
cairo-lang-debug = "1.0.0"
cairo-lang-defs = "1.0.0"
cairo-lang-diagnostics = "1.0.0"
cairo-lang-filesystem = "1.0.0"
cairo-lang-formatter = "1.0.0"
cairo-lang-language-server = "1.0.0"
cairo-lang-lowering = "1.0.0"
cairo-lang-parser = "1.0.0"
cairo-lang-plugins = "1.0.0"
cairo-lang-project = "1.0.0"
cairo-lang-semantic = { version = "1.0.0", features = [ "testing" ] }
cairo-lang-sierra-generator = "1.0.0"
cairo-lang-sierra = "1.0.0"
cairo-lang-sierra-to-casm = "1.0.0"
cairo-lang-starknet = "1.0.0"
cairo-lang-syntax = "1.0.0"
cairo-lang-test-utils = "1.0.0"
cairo-lang-test-runner = "1.0.0"
cairo-lang-utils = "1.0.0"
camino = { version = "1.1.2", features = [ "serde1" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
clap = { version = "4.2", features = [ "derive" ] }
colored = "2"
env_logger = "0.10.0"
indoc = "1.0.7"
itertools = "0.10.3"
log = "0.4.17"
num-bigint = "0.4"
pretty_assertions = "1.2.1"
rayon = "0.9.0"
salsa = "0.16.1"
scarb = { git = "https://github.com/software-mansion/scarb", version = "0.2.0" }
semver = "1.0.5"
serde = { version = "1.0.156", features = [ "derive" ] }
serde_json = "1.0"
smol_str = { version = "0.2.0", features = [ "serde" ] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "dev/jsonrpc_0_3_0" }
starknet_api = { git = "https://github.com/starkware-libs/starknet-api" }
test-log = "0.2.11"
thiserror = "1.0.32"
tokio = { version = "1.16", features = [ "full" ] }
toml = "0.4.2"
tracing = "0.1"
tracing-subscriber = "0.3.16"
yansi = "0.5.1"

[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", branch = "dev" }

[patch."https://github.com/starkware-libs/starknet-api"]
starknet_api = { git = "https://github.com/dojoengine/starknet-api", branch = "dev" }

[patch.crates-io]
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", branch = "dev/jsonrpc_0_3_0" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-language-server = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-test-runner = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "a0ead7c0b8e297d281c7213151cd43ac11de5042" }
